# DataBench-Stub

./: .gitignore  AGENTS.md  Generation 2025.json  LICENSE  README.md  Snippets.md  UK_temp_2025.json  manage.py  pyproject.toml
.clinerules/: new-app-generator.md  plotly-plots.md  testing-coach.md
stub/: __init__.py  prompts.md
stub/config/: __init__.py  settings.py  urls.py  wsgi.py
stub/config/templates/: base.html
stub/core/: __init__.py  apps.py  urls.py  views.py
stub/core/templates/core/: home.html
stub/core/templates/core/includes/: upload_spinner_modal.html
stub/generation/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
stub/generation/migrations/: 0001_initial.py  __init__.py
stub/generation/templates/generation/: chart.html  delete_confirm.html  file_list.html  upload.html
stub/static/: .gitkeep
stub/static/css/: base.css
stub/temperature/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
stub/temperature/migrations/: 0001_initial.py  __init__.py
stub/temperature/templates/temperature/: chart.html  delete_confirm.html  file_list.html  upload.html
