[project]
name = "stub"
version = "0.1.0"
description = "A simplified Django web application framework for data visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "plotly>=6.0",
    "pandas>=2.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-django>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stub"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8",
    "black>=25.1.0",
    "pytest>=8.0",
    "pytest-django>=4.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stub.config.settings"
python_files = ["test_*.py", "*_test.py"]
